# agent-infrastructure

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README-COMPLETE.md  README.md  SCREENSHOTS.md  agent-infra-loop-log.json  jest.config.js  loop-log.json  package-lock.json  package.json
.github/workflows/: ci.yml
advanced-agent-patterns/: README.md  package.json
advanced-agent-patterns/examples/: patterns.js
advanced-agent-patterns/src/: index.js
advanced-tools/: README.md  package.json
advanced-tools/examples/: tools.js
advanced-tools/src/: index.js
agent-cli/: package.json
agent-cli/src/: cli.js
agent-dashboard/: package.json
agent-dashboard/src/: server.js
agent-orchestration/: README.md  package.json
agent-orchestration/examples/: workflow.js
agent-templates/: README.md  package.json
cli/: LOOP-README.md  README.md  dashboard.html  loop.sh  package.json
core-agent-frameworks/: README.md  package.json
deployment-serving/: README.md  package.json
docker/: Dockerfile  docker-compose.yml
docs/: getting-started.md
evaluation-testing/: README.md  package.json
go-services/: go.mod  go.sum  main.go
gov-tech/: README.md
llm-providers/: README.md  package.json
memory-state-management/: README.md  package.json
multi-agent-systems/: README.md  package.json
python-agents/: agent.py  requirements.txt
rust-core/: Cargo.toml
rust-core/src/: lib.rs  main.rs
tests/: package.json
tool-use-integration/: README.md  package.json
ts-types/: index.ts
ui-dashboard/: README.md  package.json
vector-databases/: README.md  package.json
(+39 files in other folders)
